<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/titulo"
        android:onClick="exibirInfo" />

    <Button
        android:id="@+id/btnApp1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="#263238"
        android:textColor="@android:color/white"
        android:text="@string/app1"
        android:layout_marginTop="@dimen/btn_margin"
        android:layout_marginBottom="@dimen/btn_margin"
        android:onClick="exibirInfo" />

    <Button
        android:id="@+id/btnApp2"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:background="#263238"
        android:textColor="@android:color/white"
        android:text="@string/app2"
        android:layout_marginBottom="@dimen/btn_margin"
        android:onClick="exibirInfo" />

    <Button
        android:id="@+id/btnApp3"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:background="#263238"
        android:textColor="@android:color/white"
        android:text="@string/app3"
        android:layout_marginBottom="@dimen/btn_margin"
        android:onClick="exibirInfo" />

    <Button
        android:id="@+id/btnApp4"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:background="#263238"
        android:textColor="@android:color/white"
        android:text="@string/app4"
        android:layout_marginBottom="@dimen/btn_margin"
        android:onClick="exibirInfo" />

    <Button
        android:id="@+id/btnApp5"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:background="#263238"
        android:textColor="@android:color/white"
        android:text="@string/app5"
        android:layout_marginBottom="@dimen/btn_margin"
        android:onClick="exibirInfo" />

    <Button
        android:id="@+id/btnApp6"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:background="#263238"
        android:textColor="@android:color/white"
        android:text="@string/app6"
        android:onClick="exibirInfo" />
</LinearLayout>
